update script refactor functions